# cichlid-file-management

./: README.md  pyproject.toml
src/cichlid_file_management/: __init__.py  base_file_manager.py  bower_file_manager.py  file_manager.py  log_parser.py
